Fixed overlapping heading elements

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -41,7 +41,7 @@
 }
 
 .post-content {
-  h2,h3,h4,h5,h6 { @apply font-bold pt-8; }
+  h2,h3,h4,h5,h6 { @apply font-bold pt-8; scroll-margin-top: 5rem; }
 
   h2 { @apply text-4xl}
   h3 { @apply text-3xl}
